# houdini-docker

./: .env  .gitignore  README.md  docker-compose.yml
services/backend/: backend.dockerfile
services/backend/app/: pyproject.toml
services/backend/app/app/: main.py
services/backend/app/app/core/: config.py
services/backend/app/app/db/: __init__.py  models.py
services/backend/app/app/db/functions/: initialise.py
services/backend/app/app/strawberry/: __init__.py  base.py  msg.py  user.py  utils.py
services/backend/app/app/strawberry/functions/: strw_base.py  user.py
services/frontend/: Dockerfile  houdini.config.js  package.json  schema.graphql  tsconfig.json
services/frontend/src/: client.ts
services/frontend/src/routes/: +page.gql  +page.svelte
